// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > should not render the banner when no flags are set 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade


Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results"
`;

exports[`<AppHeader /> > should not render the default banner if shown count is 5 or more 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade


Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results"
`;

exports[`<AppHeader /> > should render the banner with default text 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade

╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results"
`;

exports[`<AppHeader /> > should render the banner with warning text 1`] = `
"
  ▝▜▄     Gemini CLI v1.0.0
    ▝▜▄
   ▗▟▀    Authenticated with undefined /auth
  ▝▀      Gemini Code Assist for individuals /upgrade

╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ There are capacity issues                                                                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

Tips for getting started:
1. /help for more information
2. Ask coding questions, edit code or run commands
3. Be specific for the best results"
`;
